--- a/views/list.ejs
+++ b/views/list.ejs
@@ -59,12 +59,12 @@
     </nav>
 
     <h2>서버에서 가져온 할일 리스트</h2>
-    <h4>할일 제목: <%= %></h4>
-    <p>할일 마감날짜: <%= %></p>
 
-    <h4>홈입니다.</h4>
+    <% for (let i = 0; i < posts.length; i++) { %>
+    <h4>할일 제목: <%= posts[i].제목 %></h4>
+    <p>할일 마감날짜: <%= posts[i].날짜 %></p>
+    <% } %>
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
